RESOLVED FIXED136520
Beef up the DFG's CFG analyses to include iterated dominance frontiers and more user-friendly BlockSets
https://bugs.webkit.org/show_bug.cgi?id=136520
Summary Beef up the DFG's CFG analyses to include iterated dominance frontiers and mo...
Filip Pizlo
Reported 2014-09-03 19:40:08 PDT
Patch forthcoming.
Attachments
the patch (31.94 KB, patch)
2014-09-03 19:43 PDT, Filip Pizlo
no flags
the patch (32.34 KB, patch)
2014-09-03 20:20 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2014-09-03 19:43:39 PDT
Created attachment 237606 [details] the patch
Filip Pizlo
Comment 2 2014-09-03 19:45:05 PDT
Comment on attachment 237606 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=237606&action=review > Source/JavaScriptCore/dfg/DFGDominators.h:105 > + // Visits all blocks in the dominance frontier of the given block. This often > + // visits the same block multiple times, so it's up to the callback to prune > + // accordingly. This comment is wrong, I've removed it.
WebKit Commit Bot
Comment 3 2014-09-03 19:46:22 PDT
Attachment 237606 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGDominators.h:113: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/dfg/DFGDominators.h:148: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/dfg/DFGDominators.h:164: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 3 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 4 2014-09-03 20:20:48 PDT
Created attachment 237608 [details] the patch
WebKit Commit Bot
Comment 5 2014-09-03 20:22:11 PDT
Attachment 237608 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGDominators.h:110: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/dfg/DFGDominators.h:154: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/dfg/DFGDominators.h:170: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 3 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 6 2014-09-04 11:23:05 PDT
Comment on attachment 237608 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=237608&action=review r=me > Source/JavaScriptCore/dfg/DFGDominators.h:154 > + for (unsigned successorIndex = block->numSuccessors(); successorIndex--;) { Over-indented. > Source/JavaScriptCore/dfg/DFGDominators.h:170 > + if (functor(otherBlock)) Ditto. > Source/WTF/wtf/BitVector.cpp:225 > + return false; "return true" please.
Filip Pizlo
Comment 7 2014-09-04 14:09:23 PDT
Note You need to log in before you can comment on or make changes to this bug.