Source/WTF/wtf/BitVector.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2011 Apple Inc. All rights reserved.
+ * Copyright (C) 2011, 2014 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,6 +28,7 @@
 
 #include <stdio.h>
 #include <wtf/Assertions.h>
+#include <wtf/DataLog.h>
 #include <wtf/HashFunctions.h>
 #include <wtf/HashTraits.h>
 #include <wtf/PrintStream.h>
@@ -215,6 +216,19 @@ public:
         return bitCountSlow();
     }
     
+    size_t findBit(size_t index, bool value) const
+    {
+        size_t result = findBitFast(index, value);
+        if (!ASSERT_DISABLED) {
+            size_t expectedResult = findBitSimple(index, value);
+            if (result != expectedResult) {
+                dataLog("findBit(", index, ", ", value, ") on ", *this, " should have gotten ", expectedResult, " but got ", result, "\n");
+                ASSERT_NOT_REACHED();
+            }
+        }
+        return result;
+    }
+    
     WTF_EXPORT_PRIVATE void dump(PrintStream& out) const;
     
     enum EmptyValueTag { EmptyValue };
@@ -289,6 +303,64 @@ private:
         return WTF::bitCount(static_cast<uint64_t>(bits));
     }
     
+    size_t findBitFast(size_t startIndex, bool value) const
+    {
+        if (isInline()) {
+            size_t index = startIndex;
+            findBitInWord(m_bitsOrPointer, index, maxInlineBits(), value);
+            return index;
+        }
+        
+        const OutOfLineBits* bits = outOfLineBits();
+        
+        // value = true: casts to 1, then xors to 0, then negates to 0.
+        // value = false: casts to 0, then xors to 1, then negates to -1 (i.e. all one bits).
+        uintptr_t skipValue = -(static_cast<uintptr_t>(value) ^ 1);
+        size_t numWords = bits->numWords();
+        
+        size_t wordIndex = startIndex / bitsInPointer();
+        size_t startIndexInWord = startIndex - wordIndex * bitsInPointer();
+        
+        while (wordIndex < numWords) {
+            uintptr_t word = bits->bits()[wordIndex];
+            if (word != skipValue) {
+                size_t index = startIndexInWord;
+                if (findBitInWord(word, index, bitsInPointer(), value))
+                    return wordIndex * bitsInPointer() + index;
+            }
+            
+            wordIndex++;
+            startIndexInWord = 0;
+        }
+        
+        return bits->numBits();
+    }
+    
+    size_t findBitSimple(size_t index, bool value) const
+    {
+        while (index < size()) {
+            if (get(index) == value)
+                return index;
+            index++;
+        }
+        return size();
+    }
+    
+    static bool findBitInWord(uintptr_t word, size_t& index, size_t endIndex, bool value)
+    {
+        word >>= index;
+        
+        while (index < endIndex) {
+            if ((word & 1) == static_cast<uintptr_t>(value))
+                return true;
+            index++;
+            word >>= 1;
+        }
+
+        index = endIndex;
+        return false;
+    }
+    
     class OutOfLineBits {
     public:
         size_t numBits() const { return m_numBits; }
@@ -324,6 +396,8 @@ private:
     WTF_EXPORT_PRIVATE size_t bitCountSlow() const;
     
     WTF_EXPORT_PRIVATE bool equalsSlowCase(const BitVector& other) const;
+    bool equalsSlowCaseFast(const BitVector& other) const;
+    bool equalsSlowCaseSimple(const BitVector& other) const;
     WTF_EXPORT_PRIVATE uintptr_t hashSlowCase() const;
     
     uintptr_t* bits()
